Modernize packrect